--- a/notebooks/diagram.ipynb
+++ b/notebooks/diagram.ipynb
@@ -315,6 +315,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_mmimdb = {\n",
+    "    'Action': 0,\n",
+    "    'Adventure': 1,\n",
+    "    'Animation': 2,\n",
+    "    'Biography': 3,\n",
+    "    'Comedy': 4,\n",
+    "    'Crime': 5,\n",
+    "    'Documentary': 6,\n",
+    "    'Drama': 7,\n",
+    "    'Family': 8,\n",
+    "    'Fantasy': 9,\n",
+    "    'Film-Noir': 10,\n",
+    "    'History': 11,\n",
+    "    'Horror': 12,\n",
+    "    'Music': 13,\n",
+    "    'Musical': 14,\n",
+    "    'Mystery': 15,\n",
+    "    'Romance': 16,\n",
+    "    'Sci-Fi': 17,\n",
+    "    'Short': 18,\n",
+    "    'Sport': 19,\n",
+    "    'Thriller': 20,\n",
+    "    'War': 21,\n",
+    "    'Western': 22\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_labels = len(label_mmimdb.keys())\n",
+    "label = [0]*num_labels \n",
+    "categories = [label_mmimdb[genres] for genres in ['Action','War']]\n",
+    "print(categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for category in categories:\n",
+    "    label[category] = 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
