--- a/ipynb-notebooks/visualization.ipynb
+++ b/ipynb-notebooks/visualization.ipynb
@@ -730,9 +730,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (M3CoL2)",
+   "display_name": "multimodal",
    "language": "python",
-   "name": "multimodal"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
