--- a/ipynb-notebooks-dgx6/visualization-rebuttal.ipynb
+++ b/ipynb-notebooks-dgx6/visualization-rebuttal.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/raghav/multimodal-classification/UniS-MMC/.venv_mm/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import torch\n",
@@ -35,7 +26,24 @@
     "from src.config import Config\n",
     "\n",
     "import os\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"6\"\n"
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\"))"
    ]
   },
   {
@@ -881,9 +889,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (M3CoL)",
+   "display_name": ".venv_mm",
    "language": "python",
-   "name": ".venv_mm"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
